[gd_scene load_steps=8 format=3 uid="uid://cyiiwt82o86pa"]

[ext_resource type="Script" path="res://stormController.gd" id="1_xj6im"]
[ext_resource type="Texture2D" uid="uid://vgdrxx8qy2a4" path="res://entities/enemies/bosses/assets/storm.png" id="2_4gta4"]
[ext_resource type="Texture2D" uid="uid://ckjdrv5gl83be" path="res://entities/enemies/bosses/assets/stormHurt.png" id="3_ryfdb"]
[ext_resource type="PackedScene" uid="uid://d4n3xqs2hxhs1" path="res://entities/bulletPatterns/boss/spiral.tscn" id="4_2p17f"]
[ext_resource type="PackedScene" uid="uid://bibv3md0amikx" path="res://entities/bulletPatterns/boss/10shotDirect.tscn" id="5_qm12t"]

[sub_resource type="SpriteFrames" id="SpriteFrames_g6mt5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_4gta4")
}, {
"duration": 1.0,
"texture": ExtResource("3_ryfdb")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g1y8j"]
size = Vector2(320, 320)

[node name="bossStorm" type="CharacterBody2D" groups=["enemy"]]
script = ExtResource("1_xj6im")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
z_index = 10
sprite_frames = SubResource("SpriteFrames_g6mt5")

[node name="dmgFlash" type="Timer" parent="."]
wait_time = 0.2

[node name="atkCooldown" type="Timer" parent="."]

[node name="Spiral" parent="." instance=ExtResource("4_2p17f")]

[node name="10ShotDirect" parent="." instance=ExtResource("5_qm12t")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(3, 74)
shape = SubResource("RectangleShape2D_g1y8j")
